tests/transpiler/x/scala/closure.scala
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 19:51:06 GMT+7
object Main {
    def makeAdder(n) = {
        ((x: Any) => (x + n))
    }
    def main(args: Array[String]): Unit = {
        val add10 = makeAdder(10)
        println(add10(7))
    }
}
